--- a/webpage/mypage.html
+++ b/webpage/mypage.html
@@ -19,7 +19,7 @@
 		}
 
 		body {
-			background: linear-gradient(to bottom, #33ff81, #1c9973);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(54,54,159,1) 35%, rgba(0,212,255,1) 100%);
 			animation-name: bg;
 			animation-duration: 10s;
 			animation-timing-function: ease;
