--- a/webpage/mypage.html
+++ b/webpage/mypage.html
@@ -19,7 +19,7 @@
 		}
 
 		body {
-			background-image: linear-gradient(to bottom, #2E3192, #1BFFFF);
+			background-image: linear-gradient(to bottom right, #2E3192, #1BFFFF);
 			animation-name: bg;
 			animation-duration: 10s;
 			animation-timing-function: ease;
